# data-structure

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/list/: list.c  list.h
src/queue/: queue.c  queue.h
src/stack/: stack.c  stack.h
src/string/: custom_string.c  custom_string.h
